# pixelboard

./: Cargo.toml  README.md  build.sh  build_and_deploy.sh  watch.sh
src/: layout_engine.rs  main.rs  matrix.rs
src/visualizers/: led_matrix.rs  mod.rs  terminal.rs  visualizer.rs
src/widgets/: clock.rs  mod.rs  solidblock.rs  text.rs  widget.rs
systemd/: README.md  pixelboard-watcher.path  pixelboard-watcher.service  pixelboard.service
