[package]
name = "pixelboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
chrono-tz = "0.8.2"
fontdue = "0.7.2"
rpi-led-panel = "0.3.0"
taffy = { version = "0.3.11", features = ["grid"] }
termion = "2.0.1"
